# Softserve-Task

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  ball_clock.py  bank_account.py  palindromes.py
tests/: test_ball_clock.py  test_bank_account.py  test_palindromes.py
